--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,12 @@
             <version>1.4.9</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
